--- a/MarketingSantander/nbproject/project.properties
+++ b/MarketingSantander/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.jna-platform-4.1.0.jar=C:\\Users\\Z762602\\Downloads\\selenium-ja
 file.reference.junit-4.12.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\junit-4.12.jar
 file.reference.neko-htmlunit-2.23.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\neko-htmlunit-2.23.jar
 file.reference.phantomjsdriver-1.3.0.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\phantomjsdriver-1.3.0.jar
+file.reference.poi-3.15.jar=C:\\Users\\Z762602\\Downloads\\poi-bin-3.15-20160924\\poi-3.15\\poi-3.15.jar
 file.reference.sac-1.3.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\sac-1.3.jar
 file.reference.serializer-2.7.2.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\serializer-2.7.2.jar
 file.reference.websocket-api-9.2.15.v20160210.jar=C:\\Users\\Z762602\\Downloads\\selenium-java-3.1.0\\lib\\websocket-api-9.2.15.v20160210.jar
@@ -95,7 +96,8 @@ javac.classpath=\
     ${file.reference.websocket-common-9.2.15.v20160210.jar}:\
     ${file.reference.xalan-2.7.2.jar}:\
     ${file.reference.xercesImpl-2.11.0.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.poi-3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
